// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`enzyme.mount 1`] = `
.css-1micclc,
[data-css-1micclc] {
  position: relative;
  transform: translate(-15px, -15px);
  -webkit-transform: translate(-15px, -15px);
}

.css-1micclc > div,
[data-css-1micclc] > div {
  border-radius: 100%;
  height: 15px;
  margin: 2px;
  width: 15px;
  background-color: #fff;
  animation-fill-mode: both;
  left: -7px;
  margin-left: 15px;
  position: absolute;
  top: 4px;
  -webkit-animation-fill-mode: both;
}

.css-1micclc > div:first-child,
[data-css-1micclc] > div:first-child {
  animation: animation_vvdr81 1.5s 0s infinite linear;
  -webkit-animation: animation_vvdr81 1.5s 0s infinite linear;
}

.css-1micclc > div:last-child,
[data-css-1micclc] > div:last-child {
  animation: animation_135dxz0 1.5s 0s infinite linear;
  -webkit-animation: animation_135dxz0 1.5s 0s infinite linear;
}

<BallZigZagDeflect
  loading={true}
>
  <div
    data-css-1micclc=""
  >
    <div />
    <div />
  </div>
</BallZigZagDeflect>
`;

exports[`enzyme.render 1`] = `
.css-1micclc,
[data-css-1micclc] {
  position: relative;
  transform: translate(-15px, -15px);
  -webkit-transform: translate(-15px, -15px);
}

.css-1micclc > div,
[data-css-1micclc] > div {
  border-radius: 100%;
  height: 15px;
  margin: 2px;
  width: 15px;
  background-color: #fff;
  animation-fill-mode: both;
  left: -7px;
  margin-left: 15px;
  position: absolute;
  top: 4px;
  -webkit-animation-fill-mode: both;
}

.css-1micclc > div:first-child,
[data-css-1micclc] > div:first-child {
  animation: animation_vvdr81 1.5s 0s infinite linear;
  -webkit-animation: animation_vvdr81 1.5s 0s infinite linear;
}

.css-1micclc > div:last-child,
[data-css-1micclc] > div:last-child {
  animation: animation_135dxz0 1.5s 0s infinite linear;
  -webkit-animation: animation_135dxz0 1.5s 0s infinite linear;
}

<div
  data-css-1micclc=""
>
  <div />
  <div />
</div>
`;

exports[`enzyme.shallow 1`] = `
.css-1micclc,
[data-css-1micclc] {
  position: relative;
  transform: translate(-15px, -15px);
  -webkit-transform: translate(-15px, -15px);
}

.css-1micclc > div,
[data-css-1micclc] > div {
  border-radius: 100%;
  height: 15px;
  margin: 2px;
  width: 15px;
  background-color: #fff;
  animation-fill-mode: both;
  left: -7px;
  margin-left: 15px;
  position: absolute;
  top: 4px;
  -webkit-animation-fill-mode: both;
}

.css-1micclc > div:first-child,
[data-css-1micclc] > div:first-child {
  animation: animation_vvdr81 1.5s 0s infinite linear;
  -webkit-animation: animation_vvdr81 1.5s 0s infinite linear;
}

.css-1micclc > div:last-child,
[data-css-1micclc] > div:last-child {
  animation: animation_135dxz0 1.5s 0s infinite linear;
  -webkit-animation: animation_135dxz0 1.5s 0s infinite linear;
}

<div
  data-css-1micclc=""
>
  <div />
  <div />
</div>
`;
